fix: test cases
Signed-off-by: Pavan Yekbote <pybot@amazon.com>